package edu.hitsz.prop;

// 道具类型枚举
public enum PropType {
    HP, FIRE, FIRE_PLUS, BOMB, FROZEN
}